--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
        <h3 class="quote">  This is an inspiring quote,or a testimonial from a customer.<br/>maybe its just filling up space,or maybe people will actually read it.<br/> knows? All i know that it looks nice
       </h3>
         <div class="author">-Thor,God of Thunder
-          
+
         </div>
        
       </div>
       <div class="container4">
-         <div class="h4">Call to action! it's time!</div>
-         <p>sign up for our product by clicking that button right over there</p>
-         <button>sign up</button>
+         <div class="h4"><h3>Call to action! it's time!</h3></div>
+         <p class="p">sign up for our product by clicking that button right over there</p>
+         <button class="btn2">sign up</button>
       </div>
       <div class="container5">
         Copyright © the Odin project 2021
